--- a/DotNetCoreMVC/Pages/Users.cshtml
+++ b/DotNetCoreMVC/Pages/Users.cshtml
@@ -2,6 +2,10 @@
 @model UsersModel
 @{
 }
+
+<!--Is there not a better way to do this?-->
+@Html.AntiForgeryToken()
+
 <div class="container">
     <div class="starter-template">
         <h1>Users</h1>
