--- a/DotNetCoreMVC/Pages/_Layout.cshtml
+++ b/DotNetCoreMVC/Pages/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li><a asp-page="/Index">Home</a></li>
                     <li><a asp-page="/Messages">Me</a></li>
                     <li><a asp-page="/Users">Users</a></li>
-                    <li><a asp-page="/FollowingMessages">Flow</a></li>
+                    <li><a asp-page="/FollowingMessages">Messages</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -51,6 +51,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/FollowUser.js" asp-append-version="true"></script>
+        <script src="~/js/SaveMessage.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -66,6 +68,8 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/FollowUser.js" asp-append-version="true"></script>
+        <script src="~/js/SaveMessage.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
