--- a/DotNetCoreMVC/Pages/_Layout.cshtml
+++ b/DotNetCoreMVC/Pages/_Layout.cshtml
@@ -6,10 +6,11 @@
     <title>@ViewData["Title"] - DotNetCoreMVC</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
+        <!--TODO fix these to use node-->
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
@@ -43,18 +44,19 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - DotNetCoreMVC</p>
+            <p>&copy; 2018 - DotNetCoreMVC</p>
         </footer>
     </div>
 
     <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/node_modules/jquery/dist/jquery.js"></script>
+        <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/js/FollowUser.js" asp-append-version="true"></script>
         <script src="~/js/SaveMessage.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
+        <!--TODO fix these to use node-->
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
